2021-11-13  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.28

	- Build setting is modified for separate atomic libraries.
	- One database object can be opened/closed multiple times.

2021-11-02  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.27

	- DBM::CompareExchangeAndGet is added.
	- Compatibility to the C++ library: Tkrzw 1.0.20

2021-10-30  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.26

	- DBM::CompareExchange supports ANY_DATA.
	- Compatibility to the C++ library: Tkrzw 1.0.19

2021-10-12  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.25

	- Add DBM::rekey.
	- Add Iterator::step.
	- Add DBM::popFirst and DBM::pushLast.
	- Compatibility to the C++ library: Tkrzw 1.0.18

2021-10-10  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.24

	- lock_mem_buckets is ablished.
	- Compatibility to the C++ library: Tkrzw 1.0.17

2021-09-20  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.23

	- sync_hard of the open options is supported.
	- Compatibility to the C++ library: Tkrzw 1.0.12

2021-09-19  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.22

	- Add getTimestamp method.
	- Compatibility to the C++ library: Tkrzw 1.0.11

2021-08-21  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.21

	- Compatibility to the C++ library: Tkrzw 1.0.7

2021-08-21  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.20

	- Compatibility to the C++ library: Tkrzw 1.0.2

2021-08-03  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.19

	- Make some functions native.
	- Add AsyncDBM class.

2021-07-29  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.18

	- Add Join method to Status.
	- Cache accessor to classes, methods and fields.

2021-07-28  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.17

	- Modify export methods.
	- Compatibility to the C++ library: Tkrzw 0.9.48

2021-07-25  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.16

	- Add PAGE_SIZE constant.